--- a/src/assets/style/basic/global.scss
+++ b/src/assets/style/basic/global.scss
@@ -14,7 +14,7 @@ body {
   height: 100%;
   overflow: hidden;
   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-  font-family: "Lalezar", cursive;
+  font-family: Sahel, cursive;
   color: #fff;
   direction: rtl;
 }
