--- a/src/assets/style/components/buttons.scss
+++ b/src/assets/style/components/buttons.scss
@@ -3,6 +3,9 @@ button {
   box-sizing: border-box;
   border-radius: 0.5rem;
   border: none;
+}
+
+.btn {
   transition: all 0.2s;
 
   &:hover {
@@ -20,4 +23,118 @@ button {
   padding: 0.5rem 2rem;
   border-radius: 2rem;
   color: $red_color;
+}
+
+.go-button {
+  align-items: center;
+  appearance: none;
+  background-clip: padding-box;
+  background-color: initial;
+  background-image: none;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  flex-direction: row;
+  flex-shrink: 0;
+  justify-content: center;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1rem 4rem !important;
+  pointer-events: auto;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  width: auto;
+  word-break: keep-all;
+  z-index: 0;
+
+  position: absolute;
+  left: 50%;
+  bottom: 5rem;
+  transform: translateX(-50%);
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+@media (min-width: 768px) {
+  .go-button {
+    padding: 19px 32px;
+  }
+}
+
+.go-button:before,
+.go-button:after {
+  border-radius: 80px;
+}
+
+.go-button:before {
+  background-color: rgba(255, 42, 0, 0.32);
+  content: "";
+  display: block;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -2;
+}
+
+.go-button:after {
+  background-color: initial;
+  background-image: linear-gradient(45deg, $red_color 0, red 100%);
+  bottom: 4px;
+  content: "";
+  display: block;
+  left: 4px;
+  overflow: hidden;
+  position: absolute;
+  right: 4px;
+  top: 4px;
+  transition: all 100ms ease-out;
+  z-index: -1;
+}
+
+.go-button:hover:not(:disabled):after {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  transition-timing-function: ease-in;
+}
+
+.go-button:active:not(:disabled) {
+  color: #ccc;
+}
+
+.go-button:active:not(:disabled):after {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    linear-gradient(92.83deg, #ff7426 0, $red_color 100%);
+  bottom: 4px;
+  left: 4px;
+  right: 4px;
+  top: 4px;
+}
+
+.go-button:disabled {
+  cursor: default;
+  opacity: 0.24;
+}
+
+.setting-button {
+  background: transparent;
+  position: absolute;
+  right: 2rem;
+  bottom: 2rem;
 }
