--- a/src/assets/style/layouts/header.scss
+++ b/src/assets/style/layouts/header.scss
@@ -2,4 +2,10 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
+
+  h1 {
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
 }
