--- a/src/assets/style/basic/_global.scss
+++ b/src/assets/style/basic/_global.scss
@@ -33,3 +33,11 @@ input,
 textarea {
   font-family: inherit;
 }
+
+.App {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
