--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,3 +1,3 @@
-@import "./basic";
-@import "./components";
-@import "./layouts";
+@import "./basic/_index";
+@import "./components/_index";
+@import "./layouts/_index";
