--- a/src/assets/style/components/_sphere.scss
+++ b/src/assets/style/components/_sphere.scss
@@ -1,9 +1,3 @@
-// -----------------------------------------------------
-// If you like this, be sure to also check my Jellyfish
-// pen that was inspired by this one:
-// https://codepen.io/iamlark/pen/opyBNy
-// -----------------------------------------------------
-
 $radius: 400px;
 $dotSize: 20px;
 $spokesNum: 36;
@@ -15,7 +9,7 @@ body {
   padding: 0;
   height: 100%;
   overflow: hidden;
-  background: #333;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
 }
 
 .main-wrapper {
@@ -47,8 +41,18 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  box-shadow: 0 5px 5px 0 rgba($color: #fff, $alpha: 0.2);
   border-radius: 50%;
+  border: 3px solid rgb(196, 196, 196);
+  // box-shadow: 0 0 1px 1px rgb(196, 196, 196);
+
+  // &::before {
+  //   position: absolute;
+  //   content: "";
+  //   width: 100%;
+  //   height: 10px;
+  //   background: #fff;
+  //   border-radius: 50%;
+  // }
 }
 
 .spoke {
@@ -57,9 +61,8 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  height: $radius/2;
+  height: $radius/2.2;
   width: 0px;
-  // background: rgba(255,255,255,.05);
 }
 
 @function unit($num, $unit: px) {
@@ -82,7 +85,7 @@ body {
   color: #333;
   font-weight: 900;
   text-align: center;
-  transform: rotateX(90deg) scale(0.3) translateZ(20px) scaleX(-1);
+  // transform: rotateX(90deg) scale(0.3) translateZ(20px) scaleX(-1);
 }
 
 @mixin place-spokes($spokes: $spokesNum, $i: 1) {
@@ -113,7 +116,7 @@ body {
     .spoke-#{$i} .dot,
     .spoke-#{$j} .dot {
       animation: pulsate 0.5s infinite $delay alternate both;
-      background-color: adjust-hue(#f95, $colorDeg);
+      background-color: adjust-hue(#ff6600, $colorDeg);
     }
     @include animate-dots($spokes, $i + 1);
   }
