--- a/src/assets/style/components/_sphere.scss
+++ b/src/assets/style/components/_sphere.scss
@@ -33,17 +33,8 @@ $planesNum: 12;
   bottom: 0;
   left: 0;
   border-radius: 50%;
-  border: 2px solid rgba($color: #fff, $alpha: 0.5);
+  // border: 2px solid #999;
   // box-shadow: 0 0 1px 1px rgb(196, 196, 196);
-
-  // &::before {
-  //   position: absolute;
-  //   content: "";
-  //   width: 100%;
-  //   height: 10px;
-  //   background: #fff;
-  //   border-radius: 50%;
-  // }
 }
 
 .spoke {
