--- a/src/assets/style/basic/_global.scss
+++ b/src/assets/style/basic/_global.scss
@@ -4,11 +4,11 @@ body {
   padding: 0;
   height: 100%;
   overflow: hidden;
-  background: radial-gradient(
-    ellipse at bottom,
-    #0d1d31 0%,
-    #0c0d13 100%
-  ) !important;
+  // background: radial-gradient(
+  //   ellipse at bottom,
+  //   #002b60 0%,
+  //   #0c0d13 100%
+  // ) !important;
   font-family: Sahel, cursive;
   color: #fff;
   direction: rtl;
